# FluxoBid-Processor

./: CMakeLists.txt  LICENSE  README.md
include/: bid.hpp  bidder.hpp  engine.hpp  geoprovider.hpp  metrics.hpp  models.hpp  reject_reason.hpp  server.hpp  session.hpp  store.hpp
src/: main.cpp
src/core/: bidder.cpp  engine.cpp  store.cpp
src/network/: geoprovider.cpp  server.cpp  session.cpp
tests/: test_bidder.cpp  test_engine.cpp
